# Gnosis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: File_Scan.py  chunk_embed.py  document_process.py  image_process.py
api/: main.py
api/routes/: auth.py  search.py  upload.py
api/static/: about.html  index.html  search.html  styles.css  upload.html
app/: requirements.txt
app/config/: config.yaml
app/core/: errors.py
app/db/: connection.py  file_repo.py  image_repo.py  user_repo.py
app/ingestion/: watcher.py
app/pipelines/: document_pipeline.py  image_pipeline.py
app/scripts/: test.py  test_fun.py  test_time.py
app/services/: document_service.py  image_service.py  piepeline_service.py  search_service.py
app/tasks/embedding/: embed_chunks.py  model_loader.py  vector_store.py
app/tasks/extraction/: dispatcher.py  extract_docx.py  extract_image.py  extract_pdf.py  extract_pptx.py  image_dispatcher.py
app/tasks/io/: file_fetch.py
app/tasks/processing/: chunk_text.py  validate.py
docker/: Dockerfile  Dockerfile.api  docker-compose.yaml  init.sql  requirements.txt  requirements_api.txt
